--- a/requirements.txt
+++ b/requirements.txt
@@ -26,13 +26,14 @@ Jinja2==3.1.4
 jmespath==1.0.1
 MarkupSafe==2.1.5
 packaging==24.1
-Pillow==9.5.0
-psycopg2-binary==2.9.6
+pillow==10.4.0
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pypng==0.20220715.0
 python-barcode==0.15.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 qrcode==7.4.2
@@ -41,6 +42,7 @@ requests==2.32.3
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
 s3transfer==0.6.2
+setuptools==75.8.0
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.1
